# thiskb

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  dev.Dockerfile  docker-compose.dev.yml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: release-please.yml
common/: Cargo.toml
config/: development.yaml  test.yaml
dashboard/: models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py
dashboard/templatetags/: kb_tags.py
documents/: models.py  services.py  tasks.py  utils.py
documents/migrations/: 0001_initial.py  0002_document_chunking_error_document_chunking_status_and_more.py  0003_chunk_character_count_chunk_metadata_and_more.py
examples/: playground.rs
knowledge_bases/: apps.py  models.py
knowledge_bases/migrations/: 0001_initial.py
migration/src/: lib.rs  m20241116_185457_tenants.rs  m20241116_192348_user_tenant_memberships.rs  m20241116_200701_knowledge_bases.rs  m20241116_234956_documents.rs  m20241117_004647_chunks.rs
src/: app.rs  lib.rs
src/controllers/: api.rs  auth.rs  document.rs  home.rs  mod.rs  query.rs  tenant.rs  user.rs
src/initializers/: template_engine.rs
src/models/: chunks.rs  documents.rs  knowledge_bases.rs  mod.rs  tenants.rs  user_tenant_memberships.rs
templates/: base.html
templates/dashboard/: dashboard.html  home.html
templates/home/: index.html
templates/includes/: footer.html  header.html
templates/user/: forgot_password.html
tenants/: models.py
tenants/migrations/: 0001_extensions.py  0002_initial.py
tests/models/: knowledge_bases.rs  mod.rs  user_tenant_memberships.rs  users.rs
thiskb/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
users/: models.py
(+25 files in other folders)
