[project]
name = "thiskb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery==5.4.0",
    "dj-database-url==2.3.0",
    "django==5.1.5",
    "django-anymail==12.0",
    "django-celery==3.1.17",
    "django-celery-beat==2.7.0",
    "django-compressor==4.5.1",
    "django-dbbackup==4.2.1",
    "django-debug-toolbar==5.0.1",
    "django-htmx==1.21.0",
    "django-ninja==1.3.0",
    "granian==1.7.5",
    "pgvector==0.3.6",
    "psycopg[binary]==3.2.4",
    "pydantic-ai[logfire]==0.0.19",
    "redis[hiredis]==5.2.1",
    "sentry-sdk[django]==2.20.0",
    "uuid-utils>=0.10.0",
    "whitenoise==6.8.2",
]
